# LingGym

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: extract_igt_kp_dataset.py
